# chemical_elements

./: .gitattributes  CHANGELOG.md  Cargo.toml  Justfile  README.md  build.rs
.github/workflows/: test.yaml
benches/: baffling.rs  compositions.rs  tid_filter.rs
bindings/c/: Cargo.toml
bindings/c/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
data/: build.rs  build_broken.rs  compile_nist_comp.py  nist_comp.txt  nist_mass.json
src/: abstract_composition.rs  composition.rs  composition_list.rs  composition_map.rs  element.rs  element_specification.rs  formula.rs  helper.rs  isotopic_pattern.rs  lib.rs  main.rs  mz.rs  props.rs  table.rs
src/isotopic_pattern/: baffling.rs  convolution.rs  peak.rs  poisson.rs
test/: table_new.rs  table_old.rs
