[package]
name = "chemical_elements"
version = "0.4.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/mobiusklein/chemical_elements"

description = "A library for representing chemical compositions and generating isotopic patterns"
documentation = "https://docs.rs/chemical_elements"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chemical_elements"

[lib]
name = "chemical_elements"


[features]
default = ["mzpeaks", "serde"]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
lazy_static = "1.4.0"
mzpeaks = { version = ">=0.20.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
fnv = "1.0.7"
serde_with = { version = "3.9.0", optional = true }

[build-dependencies]
serde_json = "1.0"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
test-log = "0.2.12 "

[[bench]]
name = "compositions"
harness = false

[[bench]]
name = "baffling"
harness = false

[[bench]]
name = "tid_filter"
harness = false