[package]
name = "c_chemical_elements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
crate-type = ["cdylib"]

[features]
default = ["mzpeaks", "serde1"]
serde1 = ["chemical_elements/serde", ]
mzpeaks = ["chemical_elements/mzpeaks"]

[dependencies]
chemical_elements = { path = "../../" }