[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "pychemical_elements"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

version = "0.5"